--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="heading">Please forgive me baby!!!</h1>
+    <h1 class="heading">Please forgive me!!! I will work harder for CodeMelon...</h1>
     <div><img src = "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2JiZDR0a3lvMWF4OG8yc3p6Ymdvd3g2d245amdveDhyYmx6eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" class="gif"/></div>
     <div>
       <button id = "yesBtn" class="buttons" onclick="handleYes()">Yes</button>
