correcting the typos

--- a/no.html
+++ b/no.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="yes.css">
-  <title>sorrybaby</title>
+  <link rel="stylesheet" href="no.css">
+  <title>Do you quit?</title>
 </head>
 <body>
-  <h1 class="heading">I love you baby, Yeyyyyyyyyy!!!</h1>
+  <h1 class="heading">Yeyyyyyyyyy, you still got this!!!</h1>
   <img src = "https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" class="gif"/>
 </body>
 </html>
