--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sorrybaby</title>
+  <title>Do you quit?</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="heading">Please forgive me!!! I will work harder for CodeMelon...</h1>
+    <h1 class="heading">Are you tired!! Do you want to quit????</h1>
     <div><img src = "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2JiZDR0a3lvMWF4OG8yc3p6Ymdvd3g2d245amdveDhyYmx6eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" class="gif"/></div>
     <div>
-      <button id = "yesBtn" class="buttons" onclick="handleYes()">Yes</button>
-      <button id = "noBtn" class="buttons" onclick="handleNo()" onmouseover="handleNo()">No</button>
+      <button id = "yesBtn" class="buttons" onclick="handleYes()" onmouseover="handleYes()">Yes</button>
+      <button id = "noBtn" class="buttons" onclick="handleNo()">No</button>
     </div>
   </div>
 </body>
 <script>
-  function handleNo() {
-  var noButton = document.getElementById('noBtn');
+  function handleYes() {
+  var noButton = document.getElementById('yesBtn');
   var container = document.getElementsByClassName('container')[0];
 
   var containerWidth = container.offsetWidth - noButton.offsetWidth;
@@ -32,8 +32,8 @@
   noButton.style.left = randomLeft + 'px';
 }
 
-function handleYes() {
-  window.location.href = "yes.html";
+function handleNo() {
+  window.location.href = "no.html";
 }
 </script>
 </html>
